FIX: se arreglaron problemas que no corrian los test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/cli.js",
   "scripts": {
     "test": "jest",
-    "test:e2e": "cross-env NODE_ENV=test playwright test ui.test",
+    "test:e2e": "cross-env NODE_ENV=test:e2e playwright test ui.test",
     "lint": "eslint src/**/*.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
